fix: fix margin for figures on small view

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ header {
   }
 
   .figures__container {
-    margin: 0;
+    margin: 0 0 10px 0;
   }
   .rectangle__wrapper {
    width:300px
